added send email functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="ed_hint">Type your message here...</string>
     <string name="activity">Activity</string>
     <string name="email">Email</string>
+    <string name="email_subject">The message I wrote on my app</string>
 </resources>
